feat: add Room, Message GET API